--- a/stronaglowna.html
+++ b/stronaglowna.html
@@ -22,18 +22,18 @@
     <main class="content">
         <h1 class="title">Strona główna</h1>
 
-        <p class="intro-text">
+        <p class="intro-text"><i>
             Rzeczywistość rozszerzona (ang. augmented reality), rzeczywistość poszerzona - system łączący świat rzeczywisty z generowanym komputerowo. 
             Zazwyczaj wykorzystuje się obraz z kamery, na który nałożona jest, generowana w czasie rzeczywistym, grafika 3D. 
             Istnieją także zastosowania wspomagające jedynie dźwięk.
             Rzeczywistość wirtualna (ang. virtual reality) - obraz sztucznej rzeczywistości stworzony przy wykorzystaniu technologii informatycznej. 
             Polega na multimedialnym kreowaniu komputerowej wizji przedmiotów, przestrzeni i zdarzeń. 
-            Może on reprezentować zarówno elementy świata realnego (symulacje komputerowe), jak i zupełnie fikcyjnego (gry komputerowe science-fiction).
+            Może on reprezentować zarówno elementy świata realnego (symulacje komputerowe), jak i zupełnie fikcyjnego (gry komputerowe science-fiction).</i>
         </p>
 
         <div class="columns">
             <div class="column">
-                <h2>Topic 1</h2>
+                <h2>Zastosowania AR</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur imperdiet
                     urna in eros interdum, ut feugiat sem lobortis. Integer nec sem vitae justo
@@ -42,29 +42,21 @@
             </div>
 
             <div class="column">
-                <h2>Topic 2</h2>
+                <h2>Zastosowania VR</h2>
                 <p>
-                    Morbi ultricies, purus sit amet malesuada interdum, libero elit convallis ante,
-                    at aliquet arcu ipsum sit amet ante. Pellentesque scelerisque eros sed dui facilisis,
-                    nec facilisis arcu gravida. Nam quis risus ac lacus posuere placerat.
-                </p>
-            </div>
-
-            <div class="column">
-                <h2>Topic 3</h2>
-                <p>
-                    Nunc quis mauris viverra, auctor eros id, malesuada sapien. Quisque lacinia velit
-                    sed turpis varius, id viverra turpis tempus. Aenean auctor nisl sit amet libero
-                    viverra varius. Integer at lectus tincidunt, convallis nulla vitae, fermentum
-                    dui.
+                    <ul>
+                        <li>medycyna - obrazowanie medyczne, lekarze mogą mieć dostęp do danych na temat struktury i czynności narządów wewnętrznych pacjenta</li>
+                        <li>lotnictwo - instrumenty pokładowe pokazują pilotom ważne dane na temat ukształtowania terenu, który widzą przed sobą</li>
+                        <li>motoryzacja - wyświetlanie kluczowych informacji lub obrazów np. z komputera pokładowego, radia lub systemu nawigacji na przedniej szybie samochodu lub motocykla, dzięki czemu poprawia się bezpieczeństwo jazdy gdyż kierowca nie musi odrywać wzroku od drogi</li>
+                    </ul>
                 </p>
             </div>
         </div>
 
         <div class="links">
-            <a href="https://example.com">External Link 1</a>
-            <a href="https://example.com">External Link 2</a>
-            <a href="https://example.com">External Link 3</a>
+            <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_rozszerzona">Rzeczywistość rozszerzona</a>
+            <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_wirtualna#Zastosowania">Rzeczywistość wirtualna</a>
+            <a href="https://pl.wikipedia.org/wiki/Obrazy_generowane_komputerowo">Obrazy generowane komputerowo</a>
         </div>
     </main>
 
