--- a/pictures.html
+++ b/pictures.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
 
 </head>
-<body>
+<body class="page3">
    
     <h1>AR i VR</h1>
     <div class="image-grid">
