--- a/stronaglowna.html
+++ b/stronaglowna.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body class="page1">
 
     <nav>
         <ul>
@@ -35,9 +35,9 @@
             <div class="column">
                 <h2>Zastosowania AR</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur imperdiet
-                    urna in eros interdum, ut feugiat sem lobortis. Integer nec sem vitae justo
-                    facilisis ultricies. Proin sit amet enim vitae nulla aliquet volutpat.
+                    Technologia rzeczywistości wirtualnej ma zastosowanie zarówno w dziedzinie użytkowej jak i rozrywkowej. 
+                    Daje nam narzędzia, przy użyciu których możemy uporać się z poważnymi problemami jakie niesie ze sobą życie i rozwój cywilizacji. 
+                    Udostępnia również pole dla czystej zabawy intelektualnej jaką potrafią dać szczególnie dzieciom gry komputerowe.
                 </p>
             </div>
 
